--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Shadow The Dom</title>
-  <script defer src="index.js"></script>
+  <link rel="stylesheet" href="index.css">
+  <script defer async src="index.js"></script>
   <script src="scripts/paint.js"></script>
   <script src="scripts/rgbatohex.js"></script>
+  
 </head>
 <body>
-	<h1>THE ULTIMATE LIFEFORM</h1>
-  <div id="shadow-the-hedgehog"></div>
+    <h1>THE ULTIMATE LIFEFORM</h1>
+    <div id="shadow-the-hedgehog"></div>
 </body>
 </html>
